@@ -1,3 +1,10 @@
+2004-02-12  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c (nautilus_extract_top_left_text):
+	Better handling of utf8 text.
+	(nautilus_file_rename):
+	Fix bug in previous rename checkin
+
 2004-02-11  Alexander Larsson  <alexl@redhat.com>
 
 	* cut-n-paste-code/libegg/Makefile.am:
